# mini1_project

./: .gitignore  README.md
src/rc_car_bringup/: CMakeLists.txt  package.xml
src/rc_car_bringup/config/: project.yaml  tripod_camera_homography.yaml  watch_area_waypoint.yaml  web_corners.yaml
src/rc_car_bringup/datasets/rc_car/: data.yaml
src/rc_car_bringup/docs/: agent_handoff.md  architecture.md  flowchart.md  oakd_config_note.md  project_rules.md  topic_table.md  web_control.md
src/rc_car_bringup/launch/: project.launch.py  project_nodes.launch.py  waypoint_rviz.launch.py  web_control.launch.py
src/rc_car_bringup/maps/: hoon_map.yaml
src/rc_car_bringup/rviz/: waypoint.rviz
src/rc_car_bringup/web/: hoon_map.pgm  index.html
src/rc_car_follower/: package.xml  setup.cfg  setup.py
src/rc_car_follower/rc_car_follower/: approach_planner_node.py  follow_controller_node.py  nav2_target_tracker_node.py  oakd_yolo_depth_node.py  pixel_to_map_node.py  supervisor_node.py  tripod_trigger_node.py  tripod_yolo_node.py  webcam_car_test.py  yolo_helper.py
src/rc_car_interfaces/: CMakeLists.txt  package.xml
src/rc_car_interfaces/msg/: SystemState.msg  Target2D.msg  Target3D.msg
src/rc_car_interfaces/srv/: SetFollowState.srv
src/rc_car_web/: package.xml  setup.cfg  setup.py
src/rc_car_web/rc_car_web/: web_command_node.py  web_map_node.py  web_pose_node.py
src/ros2_homework_examples/: README.md  package.xml  setup.cfg  setup.py
src/ros2_homework_examples/resource/: ros2_homework_examples
(+4 files in other folders)
