<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rc_car_bringup</name>
  <version>0.0.0</version>
  <description>Launch, config, and documentation for the RC car following mini project.</description>
  <maintainer email="ccojcp312@gmail.com">rokey</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rc_car_web</exec_depend>
  <exec_depend>rc_car_follower</exec_depend>
  <exec_depend>rc_car_interfaces</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>turtlebot4_navigation</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
